# traccc

./: .gitignore
core/include/traccc/clusterization/: clusterization_algorithm.hpp
examples/run/alpaka/: CMakeLists.txt
examples/run/cuda/: seq_example_cuda.cpp
